# labs64.io-commons

./: .gitignore  AGENTS.md  README.md  jitpack.yml  justfile
.github/workflows/: labs64io-ci.yml  labs64io-nexus-diagnostics.yml  labs64io-release.yml  release.yml
auth-context-java/: INTEGRATION.md  pom.xml
auth-context-java/src/main/java/io/labs64/authcontext/: AuthContextFilter.java  AuthContextProperties.java  AuthHeaders.java  UserContext.java  (+1 more)
auth-context-java/src/test/resources/: auth-policy.cedar  auth-policy.json  test-auth-public-paths
auth-context-python/: README.md  pyproject.toml
auth-context-python/auth_context/: __init__.py  context.py  fastapi_deps.py  httpx_hook.py  middleware.py  testing.py
auth-context-python/l64_auth_context/: __init__.py  context.py  fastapi_deps.py  httpx_hook.py  middleware.py
auth-context-python/tests/: conftest.py  test_fastapi_deps.py  test_httpx_hook.py  test_testing.py  test_vectors.py
auth-policy-cedar/: README.md  schema.cedarschema  validate.sh
auth-policy-cedar/policies/: domain.cedar  edge.cedar
auth-policy-cedar/tests/: ctx_t100.json  ctx_t200.json  entities.json
auth-policy-cerbos/: generate.sh  reference-openapi.yaml  validate.sh
auth-policy-cerbos/policies/: payment-gateway_Payment.yaml  payment_gateway_api.yaml
auth-policy-cerbos/tests/: truth_table_test.yaml
authz-queryplan-jpa/: pom.xml
openapi-spring-boot-starter/: README.md  pom.xml
openapi-spring-boot-starter/src/test/resources/openapi/: test-api.yaml
test-vectors/: auth-context-vectors.json  cedar-request-vectors.json
(+87 files in other folders)
