[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "l64-auth-context"
version = "0.1.0"
description = "Trusted gateway auth-context (X-Auth-*) parsing, enforcement and propagation for Labs64.IO Python services"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "fastapi",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["l64_auth_context*"]
